
Version 3.9.0

  - ShowErrorStatement works for "quickexec" do() calls
    [Dmitry Karasik]
    [RT #120268]
    [Github issue #44]

  - Add :pg_limits to add constants such as PG_MAX_SMALLINT
    [Greg Sabino Mullane]
    [Github issue #51]

  - Fix failing tests due to incorrect 'initdb' check
    [Greg Sabino Mullane]
    [Github issue #54]


Version 3.8.1, released July 6, 2019

  - Fix encoding of SQL_VARBINARY type in $dbh->quote() function
    [Pali]

  - Fix encoding in $dbh->do() function
    [Pali]
    [CPAN ticket #122991]

  - Fix E'' string escape handling on architectures with unsigned chars
    [Github issue #46]

  - Minor fix to allow DBD::Pg to connect to PGbouncer's internal 'pgbouncer' database.
    [Greg Sabino Mullane]
    [Github issue #47]

  - Fix so table_info test works on non-empty databases
    [Matt Buchanan]
    [CPAN ticket #127906]


Version 3.8.0, released April 25, 2019

  - Increase minimum supported PostgreSQL version to 8.0
    [Dagfinn Ilmari Mannsåker]

  - Add support for foreign tables in table_info() and column_info()
    [Dagfinn Ilmari Mannsåker]

  - Return the current database name as TABLE_CAT in info methods
    [Dagfinn Ilmari Mannsåker]

  - Handle backslash-escaped quotes in E'' strings
    [Dagfinn Ilmari Mannsåker]

  - Fix typo in Makefile.PL
    [CPAN ticket #127097]

  - Fix parsing of PostgreSQL versions >= 10 on Debian/Ubuntu
    [Dagfinn Ilmari Mannsåker]

  - Fix client_min_messages=FATAL test when PostgreSQL caps it to ERROR
    [Dagfinn Ilmari Mannsåker]
    [CPAN ticket #128529]

  - Fix ->ping error detection on PostgreSQL 12
    [Dagfinn Ilmari Mannsåker]

  - Adjust tests for new pg_ctl output
    [Erik Rijkers    er at xs4all.nl]
    [CPAN ticket #128966]

  - Adjust tests for removal of WITH OIDS in PostgreSQL 12
    [Dagfinn Ilmari Mannsåker]

  - Fix support for PostgreSQL versions back to 8.0
    [Dagfinn Ilmari Mannsåker]
